samples/_failures_safe/1761195150_0fe2ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6019b43.c:174:1: error: expected identifier or ‘(’ at end of input
  174 | void
      | ^~~~
